== Change Log

=== SVN
* Update Prototype to 1.5.0 final release. [Sean Cribbs]
* Allow specification of extension loading order in environment.rb [Daniel Sheppard]
* Fix bugs in assert_global_tag_defined and assert_tag_defined of 
  ExtensionTagTestHelper. [Sean Cribbs]
* Make sure included stylesheets and javascripts are only linked to once in 
  <head>. [Sean Cribbs]
* Fix navigation tag tests. [vitali]
* Suppress errors about missing default helper by providing a blank helper. 
  [Sean Cribbs]
* Fix mis-alignment of "Clear cache" button when homepage not present. 
  [Sean Cribbs]
* Fix issues with misnesting of modules in fixture loading extension and 
  test suites running randomly from dispatchers. [Sean Cribbs]
* Remove invalid image alignment. [tolbrino]
* Display not_found.rhtml on standard 'not found'-like exceptions. [Sean Cribbs]
* Make sitemap.js use relative URLs. [Earl Chew]
* Preliminary support for active_record sessions. [John Long]

=== 0.6.2 Jewel Carver (June 23, 2007)
* Removed some of the database specific code from the ArchiveFinder [Daniel
  Sheppard]
* Fixed typo in extension model generator documentation
* Reworked the way the generator extension is loaded (closing #500) [Keita]
* Fixed failing unit tests in instance mode [Daniel Shephard]
* Modified the page edit form to use multipart/form-data (useful for an upload 
  extension) [Sean Cribbs]

=== 0.6.1 Stone Cutter (May 5, 2007)
* Fixed a security vulnerability which caused passwords to appear in the logs
* Fixed a bug in the site map code which caused it to forget which rows were
  expanded
* The find_by_url method has been optimized to improve performance [Daniel
  Sheppard]
* GET requests are now the only requests that are cached [Daniel Sheppard] 
* Added rudimentary support for extension depencency specification through
  directory prefixing [Daniel Sheppard]
* Fixed syntax error in fixture loading extension [Sean Cribbs]
* Minor documentation fix for date tag [Sean Cribbs]