@@ -2,7 +2,7 @@ class OverridingExtension < Radiant::Extension
   version "1.2"
   description "overrides a view from basic extension"
   url "http://test.com"
-
+  
   def activate
   end
 
