@@ -66,6 +66,22 @@ class ExtensionInitializationTest < Test::Unit::TestCase
     assert_basic_extension_annotations
   end
 
+  def test_should_load_plugin_from_vendor_plugin
+    assert_nothing_raised { Radiant::Extension.const_get(:PLUGIN_PLUGIN_NORMAL) }
+    assert_equal BasicExtension.root + "/vendor/plugins/plugin_normal", Radiant::Extension::PLUGIN_PLUGIN_NORMAL
+    assert $LOAD_PATH.include?(BasicExtension.root + "/vendor/plugins/plugin_normal/lib")
+    assert defined?(NormalPlugin)
+  end
+    
+  def test_should_load_multiple_location_plugin_from_first_extension_in_load_order
+    assert_nothing_raised { Radiant::Extension.const_get(:PLUGIN_MULTIPLE) }
+    assert_equal BasicExtension.root + "/vendor/plugins/multiple", Radiant::Extension::PLUGIN_MULTIPLE
+    assert $LOAD_PATH.include?(BasicExtension.root + "/vendor/plugins/multiple/lib")
+    assert defined?(Multiple)
+    assert_not_equal OverridingExtension.root + "/vendor/plugins/multiple", Radiant::Extension::PLUGIN_MULTIPLE
+    assert !$LOAD_PATH.include?(OverridingExtension.root + "/vendor/plugins/multiple/lib")
+  end
+
   private
   
     def assert_admin_tabs(more_tabs = [])
